# XCore407I-Firmware

./: .gitignore  .gitmodules  BOARD_XCORE407I_NOTES.md  CMakeLists.txt  README.md  SETUP.md  ```cmake
.history/: CMakeLists_20250923122658.txt  CONTRIBUTING_20250919190102.md  README_20250923120342.md  README_20250923120413.md  README_20250923122423.md  README_20250923123728.md  README_20250924135043.md
.history/.github/workflows/: build_20250923101736.yml
.history/Remora-OS6/Firmware/FirmwareSource/Remora-OS6/: custom_targets_20250919123849.json  main_20250919124722.cpp  remora_20250923101742.h
.history/Remora-OS6/Firmware/FirmwareSource/Remora-OS6/TARGET_XCORE407I/: README_20250923101730.md  README_20250924154839.md  auth_20250919190407.c  board_motion_gpio_20250923105558.c  board_motion_gpio_20250923105956.c  board_motion_gpio_20250923115211.c  board_xcore407i_20250921123039.h  board_xcore407i_20250923105531.h  board_xcore407i_20250923112157.h  board_xcore407i_20250923113118.h  board_xcore407i_20250923115059.h  board_xcore407i_20250923115155.h  board_xcore407i_20250923115621.h  board_xcore407i_20250923115858.h  board_xcore407i_20250923120958.h  board_xcore407i_20250923123728.h  build_id_20250921022726.c  build_id_20250923101744.h  build_id_string_20250921022620.c  config_store_20250919181457.c  config_store_20250923101743.h  debug_uart_20250923101745.c  encoder_20250919124615.h  encoder_20250921141510.c  encoder_access_20250921055441.h  ethernet_init_20250923101736.c  ethernet_init_20250923101737.h  ethernet_init_20250923112157.c  homing_20250919180414.h  homing_20250923101743.c  jog_20250919183216.c  jog_20250923101743.h  main_xcore407i_20250923101739.cpp  main_xcore407i_20250924084351.cpp  main_xcore407i_20250924110052.cpp  main_xcore407i_20250924110721.cpp  main_xcore407i_20250924121251.cpp  main_xcore407i_20250924140524.cpp  main_xcore407i_20250924154523.cpp  motion_io_20250919184401.c  (+17 more)
.history/Remora-OS6/Firmware/FirmwareSource/Remora-OS6/st/: README_HAL_20250923101731.md
.history/docs/: hardware_notes_20250920105726.md  hardware_notes_20250923112157.md  hardware_notes_20250923112214.md  hardware_notes_20250923113118.md  hardware_notes_20250923114111.md  hardware_notes_20250923114517.md  hardware_notes_20250923114557.md  hardware_notes_20250923114839.md  hardware_notes_20250923115225.md  hardware_notes_20250923115657.md  hardware_notes_20250923115705.md  hardware_notes_20250923123728.md  protocol_20250923101735.md
.history/host/: remora_client_20250924135025.py
.history/resources/: README_20250923101731.md  fetch_resources_20250923101731.sh  manifest_20250919115848.json
.history/resources/schematic/schematic xcoref407i/: MCU_20250923102735  MCU_20250924084812
.history/scripts/: check_and_flash_20250923101744.sh  extract_full_pin_map_20250923122843.py  extract_pin_map_20250923121530.py  extract_pin_map_20250923122626.py  gen_pin_map_20250923115924.py  gen_pin_map_profiles_20250923121012.py  init_minimal_submodules_20250919164735.sh  verify_pin_maps_20250923122615.py  verify_pin_maps_20250923123025.py
.history/src/net/: ethernetif_20250921032419.c  udp_echo_20250923101745.c
.history/st/hal_conf/: stm32f4xx_hal_conf_20250924083553.h
.history/targets/TARGET_XCORE407I/: CMakeLists_20250923101730.txt  CMakeLists_20250923105756.txt  CMakeLists_20250924084342.txt  CMakeLists_20250924084911.txt  CMakeLists_20250924085013.txt  CMakeLists_20250924090205.txt  SCHEMATIC_20250924145600.md  STM32F407IGT_FLASH_20250923101730.ld  startup_stm32f407xx_20250919115146.s  syscalls_20250919153147.c
.history/targets/TARGET_XCORE407I/lwip_port/: sys_arch_20250919145350.c  sys_port_20250919153001.c
.history/tests/: test_packet_layout_20250923101735.py
XCore407I-Firmware/: .clang-format  CHANGELOG.md  README.md
XCore407I-Firmware/build-target/: CMakeCache.txt  Makefile  XCORE407I_FIRMWARE  XCORE407I_FIRMWARE.map  cmake_install.cmake
XCore407I-Firmware/build-validate/: XCORE407I_FIRMWARE.map
XCore407I-Firmware/cmake/toolchains/: arm-gcc-stm32.cmake
XCore407I-Firmware/docs/: protocol.md
XCore407I-Firmware/scripts/: run_static_analysis.sh
XCore407I-Firmware/targets/TARGET_XCORE407I/: CMakeLists.txt  STM32F407IGT_FLASH.ld
XCore407I-Firmware/targets/TARGET_XCORE407I/lwip_port/: lwipopts.h
XCore407I-Firmware/targets/TARGET_XCORE407I/lwip_port/arch/: cc.h
build-base/: CMakeCache.txt  Makefile  XCORE407I_FIRMWARE  cmake_install.cmake
build-clean/: CMakeCache.txt  Makefile  XCORE407I_FIRMWARE  XCORE407I_FIRMWARE.map  cmake_install.cmake
build-dfu/: CMakeCache.txt  Makefile  cmake_install.cmake
build-dfu/targets/TARGET_XCORE407I/: Makefile  XCORE407I_FIRMWARE  XCORE407I_FIRMWARE.map  cmake_install.cmake
build-diag/: CMakeCache.txt  Makefile  XCORE407I_FIRMWARE  XCORE407I_FIRMWARE.map  cmake_install.cmake
build-ethgood/: CMakeCache.txt  Makefile  XCORE407I_FIRMWARE  XCORE407I_FIRMWARE.map  cmake_install.cmake
build-target/: CMakeCache.txt  Makefile  XCORE407I_FIRMWARE  XCORE407I_FIRMWARE.map  cmake_install.cmake
build-validate/: CMakeCache.txt  Makefile  XCORE407I_FIRMWARE  cmake_install.cmake
cmake/: eth_good_profile.cmake
host/: remora_client.py
resources/schematic/: xcore407i schematic
resources/schematic xcore407i/: ETHERNET DP83848I schematic  NAND FLASH schematic  POWER RTC schematic  Pin Port scematic  USB FS OTG schematic  USB HS ULPI schematic
scripts/: build_dfu_good.sh  build_eth_good.sh  extract_remora_history.ps1  flash_dfu.ps1  flash_dfu.sh  pin_map.csv  pin_map_extracted.csv  pin_map_full.csv  pin_map_profiles.csv
src/net/: board_xcore407i.h  ethernetif.c  ethernetif.h  lwipopts.h
st/hal_conf/: stm32f4xx_hal_conf.h
targets/TARGET_XCORE407I/: CMakeLists.txt  SCHEMATIC.md  STM32F407IGT_FLASH.ld  main_cdc_minimal.c  main_minimal.c  system_clock.c
targets/TARGET_XCORE407I/lwip_port/arch/: sys_arch.h
targets/TARGET_XCORE407I/usb/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
tests/: test_jog_ramp.py
(+48 files in other folders)
